# mansostst

./: CLAUDE.md  CMakeLists.txt
apps/demo/PD4/: raiditajs.c
apps/demo/PD6/: Makefile  gateway.c  relay.c  sensor.c
mos/lib/: dprint-radio.c
mos/make/: Makefile
mos/make/arch/: Makefile.msp430  Makefile.pc
